--- a/naver/src/css/main.css
+++ b/naver/src/css/main.css
@@ -118,4 +118,51 @@ h4 {
   content: "";
 }
 
+.searchbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.searchbar__form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 488px;
+  max-width: 488px;
+  height: 52px;
+  padding: 0 10px;
+  border: 1px solid #03cf5d;
+  border-radius: 26px;
+  background-color: #fff;
+  box-shadow: 0 5px 10px 0 rgba(117, 145, 181, 0.12);
+}
+.searchbar__logo__image {
+  width: 40px;
+  height: 40px;
+  display: block;
+  background: url("/naver/src/images/sp/sp-main-search.png");
+  background-repeat: no-repeat;
+  background-position: 0 -194px;
+  background-size: 323px 234px;
+  content: "";
+  background-color: #03c75a;
+}
+.searchbar__input {
+  width: 100%;
+  font-size: 16px;
+  margin-left: 8px;
+  background-color: #fff;
+}
+.searchbar__button-voice {
+  width: 34px;
+  height: 34px;
+  display: block;
+  background: url("/naver/src/images/sp/sp-main-search.png");
+  background-repeat: no-repeat;
+  background-position: -135px -194px;
+  background-size: 323px 234px;
+  content: "";
+  background-color: #03c75a;
+}
+
 /*# sourceMappingURL=main.css.map */
