feat: 네이버 navbar 구현

--- a/naver/src/css/main.css
+++ b/naver/src/css/main.css
@@ -165,4 +165,30 @@ h4 {
   background-color: #03c75a;
 }
 
+.navbar {
+  width: 360px;
+  max-width: 360px;
+  margin: 24px auto;
+}
+.navbar__list {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-rows: repeat(2, 78px);
+  grid-template-columns: repeat(4, minmax(88px, 4fr));
+}
+.navbar__shortcut__link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.navbar__shortcut__text {
+  font-size: 11px;
+  margin-top: 8px;
+}
+.navbar__image {
+  width: 44px;
+  height: 44px;
+}
+
 /*# sourceMappingURL=main.css.map */
