--- a/naver/src/css/main.css
+++ b/naver/src/css/main.css
@@ -191,4 +191,16 @@ h4 {
   height: 44px;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.content__ad {
+  margin: 64px auto 0px auto;
+}
+.content__ad__image {
+  width: 375px;
+}
+
 /*# sourceMappingURL=main.css.map */
