--- a/naver/src/scss/_content.scss
+++ b/naver/src/scss/_content.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    // margin-left: 40px;
+    margin-left: 16px;
 
     &__item {
       width: 31.8vw;
@@ -249,6 +249,41 @@
 
 .now {
   height: 224px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  // align-items: center;
+
+  &__image {
+    width: 48px;
+    height: 14px;
+    margin: 24px;
+    align-self: flex-start;
+    @include setImage(
+      $url: '/naver/src/images/sp/sp_search.png',
+      $size: 384px 381px,
+      $position: -215px -318px
+    );
+  }
+
+  &__list {
+    display: flex;
+    -ms-overflow-style: none;
+  }
+
+  &__list::-webkit-scrollbar {
+    display: none;
+  }
+
+  &__item {
+    &__image {
+      position: relative;
+      width: 112px;
+      height: 112px;
+      margin: 8px 4px 48px 4px;
+      border-radius: 6px;
+    }
+  }
 }
 
 .vaccine {
