--- a/naver/src/scss/_content.scss
+++ b/naver/src/scss/_content.scss
@@ -12,16 +12,16 @@
   }
 
   &__card {
-    $gap: 16px;
-    max-height: 600px;
+    max-height: 33vw;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-left: 16px;
+    margin: 16px;
 
     &__item {
-      width: 31.8vw;
-      margin: 0 $gap $gap 0;
+      width: 32vw;
+      margin: 0 16px 16px 0;
       border-radius: 10px;
       box-shadow: 0 1px 4px 0 rgba(black, 0.06);
       box-sizing: border-box;
@@ -252,7 +252,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  // align-items: center;
 
   &__image {
     width: 48px;
@@ -330,7 +329,7 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1652px) {
   .content__card {
     max-height: 1000px;
   }
@@ -340,7 +339,17 @@
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 1024px) {
+  .content__card {
+    max-height: 1000px;
+  }
+
+  .content__card__item {
+    width: 47vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .content__card {
     max-height: none;
   }
