--- a/naver/src/scss/_header.scss
+++ b/naver/src/scss/_header.scss
@@ -1,11 +1,10 @@
-@import './mixins/image';
-@import './mixins/flexbox';
+@import './mixins';
 
 .header {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 120px;
-  @include flexbox($jc: between, $ai: start);
 
   &__menu {
     width: 44px;
@@ -24,7 +23,6 @@
     justify-content: flex-end;
     align-items: center;
     margin: 8px;
-    // text-align: center;
 
     &__item {
       .qr {
