--- a/naver/src/scss/mixins.scss
+++ b/naver/src/scss/mixins.scss
@@ -1,6 +1,7 @@
-@mixin setImage($url, $size, $position, $repeat: no-repeat) {
+@mixin setImage($url, $size, $position, $display: block, $repeat: no-repeat) {
+  display: $display;
   background: url($url);
+  background-repeat: $repeat;
   background-position: $position;
   background-size: $size;
-  background-repeat: $repeat;
 }
